<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CA1515"
        android:clickable="true"
        android:focusable="true"

        tools:context=".view.CartFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/search_result_item" />


    </FrameLayout>

</layout>