...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/collectionPrice"
                tool:text="relaseDate" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:id="@+id/addcart"
                android:layout_height="wrap_content"
                android:checked="@={searchResult.checked}"
                android:text="Add to cart"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relaseDate" />
...
